# esp-cs110

./: .gitignore  CMakeLists.txt  README.md  esp-cs110.c  idf_component.yml
examples/esp-cs110-example/: CMakeLists.txt
examples/esp-cs110-example/main/: CMakeLists.txt  esp-cs110-example.c  idf_component.yml
include/: esp-cs110.h
